cmake_minimum_required(VERSION 3.20)
project(ZERO_JUDGE)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZERO_JUDGE main.cpp)
add_executable(d066 zero-judge/d066.cpp)
add_executable(virtual  vitrual.cpp)
add_executable(leetcode2 leetcode/leetcode2.cpp)
add_executable(a015 zero-judge/a015.cpp)
add_executable(lt49 leetcode/leetcode-49.cpp)