cmake_minimum_required(VERSION 3.20)
project(ZERO_JUDGE)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZERO_JUDGE main.cpp)
add_executable(d066 zero-judge/d066.cpp)
add_executable(virtual  vitrual.cpp)
add_executable(leetcode2 leetcode/leetcode2.cpp)
add_executable(a17 zero-judge/a17.cpp)
add_executable(lt49 leetcode/leetcode-49.cpp)
add_executable(apcs-1 apcs/2020-1-1.cpp)
add_executable(apcs-2 apcs/2020-1-2.cpp)
add_executable(e924 zero-judge/e924.cpp)
add_executable(d028 homework/owo1.cpp)
add_executable(homework5 homework/homework5.cpp)
add_executable(hw6 homework/homework_6.cpp)