cmake_minimum_required(VERSION 3.20)
project(ZERO_JUDGE)

set(CMAKE_CXX_STANDARD 14)

add_executable(ZERO_JUDGE main.cpp)
add_executable(d066 zero-judge/d066.cpp)
add_executable(virtual  vitrual.cpp)
add_executable(leetcode1 leetcode/problem_1.cpp leetcode/leetcode141.cpp leetcode/leetcode209.cpp)
add_executable(leetcode2 leetcode/leetcode2.cpp)
add_executable(leetcode3 leetcode/leetcode3.cpp)
add_executable(leetcode4 leetcode/leetcode-4.cpp)
add_executable(leetcode167 leetcode/leetcode167.cpp)
add_executable(leetcode209 leetcode/leetcode209.cpp)
add_executable(a17 zero-judge/a17.cpp zero-judge/C455.cpp zero-judge/C458.cpp zero-judge/C456.cpp zero-judge/C299.cpp)
add_executable(lt49 leetcode/leetcode-49.cpp)
add_executable(apcs-1 apcs/2020-1-1.cpp)
add_executable(apcs-2 apcs/2020-1-2.cpp)
add_executable(e924 zero-judge/e924.cpp)
add_executable(d028 homework/owo1.cpp)
add_executable(homework5 homework/homework5.cpp)
add_executable(hw6 homework/homework_6.cpp)
add_executable(hw7 homework/hw7.cpp)
add_executable(hw8 homework/hw8.cpp)
add_executable(hw9 homework/hw9.cpp)
add_executable(hw10 homework/hw10.cpp)
add_executable(hw11 homework/hw11.cpp)
add_executable(hw12 homework/hw12.cpp)
add_executable(C458 zero-judge/C458.cpp)
add_executable(C456 zero-judge/C456.cpp)
add_executable(C299 zero-judge/C299.cpp)